--- a/app/assets/javascripts/templates/dashboard.html
+++ b/app/assets/javascripts/templates/dashboard.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>The Home View!</h1>
+    <h1>Dashboard</h1>
     <ul>
         <li ng-repeat="thing in things">{{thing}}</li>
     </ul>
